Change to fade in to fix footer extra space

--- a/src/components/container/ScrollContainer.module.scss
+++ b/src/components/container/ScrollContainer.module.scss
@@ -2,7 +2,6 @@
   opacity: 0;
 }
 
-.fadeIn,
 .slideUp {
   animation-duration: 0.5s;
   animation-timing-function: ease-in-out;
@@ -22,6 +21,12 @@
 
 .slideUp {
   animation-name: slide-up;
+}
+
+.fadeIn {
+  animation-duration: 0.6s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
 }
 
 @keyframes fade-in {
